# potjie

./: .gitignore  Cargo.toml  LICENSE  POTJIE.MD  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
crates/potjie-cli/: Cargo.toml
crates/potjie-cli/src/: main.rs
crates/potjie-core/: Cargo.toml
crates/potjie-core/src/: base.rs  boxes.rs  config.rs  desktop.rs  disk.rs  forward.rs  guard.rs  lib.rs  paths.rs  proc.rs  protocol.rs  qemu.rs  secret.rs  seed.rs  ssh.rs  tools.rs
crates/potjie-daemon/: Cargo.toml
crates/potjie-daemon/src/: lib.rs  main.rs
crates/potjie-gtk/: Cargo.toml
crates/potjie-gtk/src/: main.rs
crates/potjie-gtk/src/ui/: create.rs  detail.rs  launch.rs  mod.rs  overview.rs  ports.rs  shell.rs
flatpak/: cargo-sources.json  com.potjie.Potjie.desktop  com.potjie.Potjie.metainfo.xml  com.potjie.Potjie.yaml  io.github.StoneAgeDev.potjie.desktop  io.github.StoneAgeDev.potjie.metainfo.xml  io.github.StoneAgeDev.potjie.yaml  potjie-gtk.AppImage  potjie-wrapper.sh  result
