[workspace]
resolver = "2"
members = [
    "crates/potjie-core",
    "crates/potjie-cli",
    "crates/potjie-daemon",
    "crates/potjie-gtk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["potjie contributors"]
repository = "https://example.com/potjie"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
