[package]
name = "potjie-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
ureq = "2"
sha2 = "0.10"
fatfs = "0.3"
fscommon = "0.1"
ssh-key = { version = "0.6", features = ["ed25519", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
